--- a/parallax website/src/index.html
+++ b/parallax website/src/index.html
@@ -13,7 +13,7 @@
 <body>
     <section>
         <nav>
-            <a href="#">developedbythalha</a>
+            <a href="#">devthalha</a>
             <h4>Sign Up</h4>
         </nav>
         <div class="container">
@@ -24,23 +24,23 @@
         </div>
         <div class="content">
             <div class="content-images">
-                <div>
+                <div class="img">
                     <img src="../assets/switzleft.png" id="switzleft">
                     <h4>SwitzerLand</h4>
                     <h3>Mountains of Tibitaboo</h3>
                 </div>
-                <div>
+                <div class="img">
                     <img src="../assets/switzright.png" id="switzright">
                     <h4>SwitzerLand</h4>
                     <h3>Mountains of Tibitaboo</h3>
                 </div>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat itaque, nesciunt amet
-                    eligendi dolores, unde reiciendis fugiat cupiditate nisi incidunt esse impedit sunt non
-                    exercitationem.</p>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat itaque, nesciunt amet
-                    eligendi dolores, unde reiciendis fugiat cupiditate nisi incidunt esse impedit sunt non
-                    exercitationem.</p>
             </div>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat itaque, nesciunt amet
+                eligendi dolores, unde reiciendis fugiat cupiditate nisi incidunt esse impedit sunt non
+                exercitationem.</p>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat itaque, nesciunt amet
+                eligendi dolores, unde reiciendis fugiat cupiditate nisi incidunt esse impedit sunt non
+                exercitationem.</p>
         </div>
     </section>
 
